--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "highlight.js": "^11.11.1",
     "next": "15.5.3",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "tailwind": "^4.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
