--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "deploy": "gh-pages -d out"
   },
   "dependencies": {
     "firebase": "^12.3.0",
@@ -19,6 +20,8 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "eslint": "^9",
-    "eslint-config-next": "15.5.3"
-  }
+    "eslint-config-next": "15.5.3",
+    "gh-pages": "^6.3.0"
+  },
+  "homepage": "https://errecart.github.io/PlayBook-UI"
 }
