--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint",
-    "deploy": "gh-pages -d out"
+    "lint": "eslint"
   },
   "dependencies": {
     "firebase": "^12.3.0",
@@ -20,8 +19,6 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "eslint": "^9",
-    "eslint-config-next": "15.5.3",
-    "gh-pages": "^6.3.0"
-  },
-  "homepage": "https://errecart.github.io/PlayBook-UI"
+    "eslint-config-next": "15.5.3"
+  }
 }
