--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "eslint": "^9",
+    "eslint": "^8.57.0",
     "eslint-config-next": "15.5.3"
+  },
+  "engines": {
+    "node": "20.x"
   }
 }
