--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "firebase": "^12.3.0",
     "highlight.js": "^11.11.1",
-    "next": "15.5.3",
+    "next": "^15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "tailwind": "^4.0.0"
