--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "highlight.js": "^11.11.1",
     "next": "^15.5.4",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "tailwind": "^4.0.0"
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4.1.18",
+    "autoprefixer": "^10.4.23",
     "eslint": "^8.57.0",
-    "eslint-config-next": "15.5.3"
+    "eslint-config-next": "15.5.3",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18"
   },
   "engines": {
     "node": "20.x"
